<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_margin="0dp"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
        
        <EditText 
            android:id="@+id/et_serverip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/serverip"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_et" />
        
        <EditText 
            android:id="@+id/et_servport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:hint="@string/servport"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_et" />
        
        <EditText 
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_et" />
        
        <EditText 
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_et" />
        
        <!-- 复选框记住密码和选择通过互联网接入 -->
        <LinearLayout 
            android:id="@+id/checkContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <CheckBox 
                android:id="@+id/keepPassWord"
                android:layout_width="0dp" 
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/keepPassword" />
            <CheckBox 
                android:id="@+id/passInternet"
                android:layout_width="0dp" 
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/passInternet" />
        </LinearLayout>
        
        <!-- 登录按钮 -->
        <Button 
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/loginIn"
            android:background="@drawable/bg_btn" />
        
    </LinearLayout>
    
    

</RelativeLayout>
