<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/realTimePlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>

            <include layout="@layout/player_misc" />
        </FrameLayout>
    </LinearLayout>
	<LinearLayout
        android:id="@+id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
            <ImageView 
            	android:id="@+id/camera_image"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:gravity="center">
            </ImageView>
            <TextView
		        android:id="@+id/camera_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dip"
		        android:text="@string/menu_camera_realtime_scan"
		        android:gravity="center"
		        android:layout_marginLeft="13px"
		        android:textColor="#99CCFF">
		    </TextView>
    </LinearLayout>
    
    
     <!-- 设置 -->
    <LinearLayout 
	    android:id="@+id/ptzsettingtools"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="80dip"
	    android:layout_marginTop="20dip"
	    android:visibility="gone"
	    android:orientation="vertical">     
	    <LinearLayout 
		    android:id="@+id/collection"
		    android:background="@drawable/collection"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
		        <TextView 
		        android:id="@+id/text_collection"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15dip"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/collection">
		        </TextView>
	    </LinearLayout>

	    <LinearLayout 
		    android:id="@+id/show_hiden_tools"
		    android:background="@drawable/show_hiden_tools"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:id="@+id/text_show_hiden_tools"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15dip"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/show_tools">
	        </TextView>
    	</LinearLayout>  
      
	    <LinearLayout 
		    android:id="@+id/show_hiden_snap"
		    android:background="@drawable/show_hiden_snap"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:id="@+id/text_show_hiden_snap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15dip"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/show_snap">
	        </TextView>
    	</LinearLayout>

	    <LinearLayout 
		    android:id="@+id/ptz_step_len"
		    android:background="@drawable/step_length"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15dip"
		        android:layout_marginTop="5dip"
		        android:layout_marginLeft="8dip"
		        android:text="@string/set_ptz_speed">
	        </TextView>
	        <SeekBar 
		        android:id="@+id/step_seekbar"
		        android:layout_marginTop="2dip"
		        android:layout_marginBottom="5dip"
		        android:layout_width="106dip"
		        android:layout_height="30dip"
		        android:thumbOffset="9.5dip"
		        android:maxHeight="12dip" 
		    	android:minHeight="12dip" 
		    	android:layout_marginLeft="10dip"
		        android:progressDrawable="@drawable/ptz_seekbar_img"
		        android:thumb="@drawable/ptz_thumb" 
		        android:progress="5"
		        android:max="9"/>
	        <TextView 
		        android:layout_width="20dip"
		        android:text="10"
		        android:layout_marginTop="5dip"
		        android:layout_marginLeft="2dip"
		        android:layout_height="wrap_content"
		        android:id="@+id/seekbar_value">
	        </TextView>
	    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
	    android:id="@+id/streamSettings"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="80dip"
	    android:layout_marginTop="100dip"
	    android:visibility="gone"
	    android:orientation="vertical">     
	    <LinearLayout 
		    android:id="@+id/mainStream"
		    android:background="@drawable/mainstream_selector"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:id="@+id/text_mainStream"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15sp"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="8dip"
		        android:text="@string/mainStream">
	        </TextView>
    	</LinearLayout>

	    <LinearLayout 
		    android:id="@+id/subStream"
		    android:background="@drawable/substream_selector"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:id="@+id/text_subStream"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15sp"
		        android:textColor="@color/streamSelected"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="8dip"
		        android:text="@string/subStream">
	        </TextView>
	    </LinearLayout>  
      
	    <LinearLayout 
		    android:id="@+id/mtuStream"
		    android:background="@drawable/mtustream_selector"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content">
	        <TextView 
		        android:id="@+id/text_mtuStream"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dip"
		        android:textSize="15sp"
		        android:layout_marginLeft="8dip"
		        android:layout_marginRight="8dip"
		        android:text="@string/mtuStream">
	        </TextView>
	    </LinearLayout>
   
    </LinearLayout>
    
    
    <LinearLayout 
	    android:id="@+id/lin3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="10dip"
	    android:layout_marginTop="15dip"
	    android:orientation="vertical">    
    	<ImageView
            android:id="@+id/setting"
            android:layout_marginTop="8dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/ptz_setting"/>
    	<ImageView
            android:id="@+id/streamSet"
            android:layout_marginTop="35dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/ptz_setting"/>        
        <ImageView
            android:id="@+id/airgraph"
            android:layout_marginTop="35dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/imgbtn_airgraph"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ptzControl_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true">


    <include
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
		layout="@layout/ptz_control1"
         android:layout_width="fill_parent"/>
     </LinearLayout>

</RelativeLayout>